--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "consola": "^2.15.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.0"
   },
